<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_app_name">Spotify Streamer</string>
    <string name="football_app_name">Football Scores App</string>
    <string name="library_app_name">Library App</string>
    <string name="built_it_bigger_app_name">Build It Bigger</string>
    <string name="xyz_reader_app_name">XYZ Reader</string>
    <string name="capstone_app_name">Capstone: My own app</string>
    <string name="main_header">My Nanodegree Apps!</string>
</resources>
