<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main_header" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="bold"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/spotify_app_name"
        android:id="@+id/button_spotify"
        android:layout_below="@+id/textView"
        style="@style/MaterialButton" />
    <Button
        android:text="@string/football_app_name"
        android:id="@+id/button_footbal_scores"
        android:layout_below="@+id/button_spotify"
        style="@style/MaterialButton" />
    <Button
        android:text="@string/library_app_name"
        android:id="@+id/button_library"
        android:layout_below="@+id/button_footbal_scores"
        style="@style/MaterialButton" />
    <Button
        android:text="@string/built_it_bigger_app_name"
        android:id="@+id/button_build_it_bigger"
        android:layout_below="@+id/button_library"
        style="@style/MaterialButton" />
    <Button
        android:text="@string/xyz_reader_app_name"
        android:id="@+id/button_xyz_reader"
        android:layout_below="@+id/button_build_it_bigger"
        style="@style/MaterialButton" />
    <Button
        android:text="@string/capstone_app_name"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_xyz_reader"
        style="@style/MaterialButton" />
</RelativeLayout>
